Implemented clear and delete CLI commands

--- a/SampleWebApi/Properties/launchSettings.json
+++ b/SampleWebApi/Properties/launchSettings.json
@@ -9,7 +9,7 @@
     }
   },
   "profiles": {
-    "WebApplication1": {
+    "SampleWebApi": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
