Change CLI exe name to just dev-jwts & add descriptions

--- a/DevJwts.Cli/DevJwts.Cli.csproj
+++ b/DevJwts.Cli/DevJwts.Cli.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <LangVersion>preview</LangVersion>
+    <AssemblyName>dev-jwts</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
